test/fail/MissingSemicolons.java
class MissingSemicolons{
    public static void main(String[] a){
        System.out.println("Test ");
    }
}

class Test{

    int foo

    int a1(){
		int aux01 
       
        return 0 ;
    }

	int b2(){
		int aux01 ;
       
        return 0 
    }
	
}
